--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "newbieland",
 	"version": "0.0.1",
 	"private": true,
+	"engines": {
+		"node": ">=18.0.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -10,13 +13,13 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/kit": "2.36.2",
+		"svelte": "5.38.3",
+		"svelte-check": "4.3.1",
+		"tslib": "2.8.1",
+		"typescript": "5.9.2",
+		"vite": "7.1.3"
 	},
 	"type": "module"
 }
